tests/errors/macro/parser_unexpected_grid/kw_in_middle_of_line.c
int a = 0; #define a 1

int main()
{
	assert(a, "recovery is not working");
	return 0;
}
